maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:10: error: expected class or object definition
def indication(x:Int, y:Int, i:Int){
^JediEscaper:22: error: expected class or object definition
for(i <- 0 to getMondeLargeur()-1){
^JediEscaper:30: error: expected class or object definition
while(!estSurBiscuit()){
^